test/classes/vass/class-new-error.good
class-new-error.chpl:4: syntax error: 'new' expression is missing its argument list
