test/classes/vass/class-new-error.chpl
class A {
  var b:int;
}
writeln(new A);  // error: missing parentheses
